--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ README.html
 compressed
 canvasFileSync.zip
 .idea
+.DS_Store
+dist/electron/*
+dist/web/*
+build/*
+!build/icons
+coverage
+node_modules/
+npm-debug.log
+npm-debug.log.*
+thumbs.db
+!.gitkeep
