--- a/package.json
+++ b/package.json
@@ -1,47 +1,130 @@
 {
   "name": "canvas-file-sync",
-  "version": "1.0.0",
-  "description": "Syncs files from canvas to your local machine",
-  "main": "main.js",
+  "version": "0.0.0",
+  "author": "Drew Royster <drew.124@gmail.com>",
+  "description": "An electron-vue project",
+  "license": null,
+  "main": "./dist/electron/main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-packager .",
-    "build-mac": "electron-packager . --platform=darwin --asar --overwrite --app-bundle-id=\"com.drewroyster.canvasfilesync\" --app-verions=\"1.0.0\" --build-version=\"1.0.100\" --osx-sign --out=build --icon=icons_normal/icons/mac/icon.icns",
-    "build-windows": "electron-packager . --platform=win32 --asar --overwrite --out=build --icon=icons_normal/icons/win/icon.ico",
-    "build-linux": "electron-packager . --platform=linux --asar --overwrite --out=build --icon=icons_normal/icons/png/48x48.png",
-    "test": "mocha"
+    "build": "node .electron-vue/build.js && electron-builder",
+    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
+    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
+    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
+    "dev": "node .electron-vue/dev-runner.js",
+    "watch": "cross-env BUILD_TARGET=web node .electron-vue/dev-runner.js",
+    "e2e": "npm run pack && mocha test/e2e",
+    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
+    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src test",
+    "pack": "npm run pack:main && npm run pack:renderer",
+    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "test": "npm run unit && npm run e2e",
+    "unit": "karma start test/unit/karma.conf.js",
+    "postinstall": "npm run lint:fix"
   },
-  "repository": "https://github.com/drew-royster/canvasFileSync",
-  "keywords": [
-    "Electron",
-    "Canvas LMS",
-    "Canvas File Sync",
-    "Student",
-    "Canvas",
-    "University",
-    "File Sync"
-  ],
-  "author": "Drew Royster",
-  "productName": "Canvas File Sync",
-  "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "^2.0.8",
-    "electron-debug": "^2.0.0",
-    "electron-icon-maker": "0.0.4",
-    "electron-packager": "^12.1.0",
-    "electron-winstaller": "^2.6.4",
-    "icon-convert": "^1.0.0",
-    "mocha": "^5.2.0",
-    "spectron": "^3.8.0"
+  "build": {
+    "productName": "vue-canvas",
+    "appId": "org.simulatedgreg.electron-vue",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "dist/electron/**/*"
+    ],
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "mac": {
+      "icon": "build/icons/icon.icns"
+    },
+    "win": {
+      "icon": "build/icons/icon.ico"
+    },
+    "linux": {
+      "icon": "build/icons"
+    }
   },
   "dependencies": {
-    "javascript-autocomplete": "^1.0.3",
-    "jquery": "^3.3.1",
-    "electron-log": "^2.2.16",
-    "electron-squirrel-startup": "^1.0.0",
+    "axios": "^0.18.0",
+    "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
-    "moment": "^2.22.2",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "path": "^0.12.7",
+    "request-promise": "^4.2.2",
+    "vue": "^2.4.2",
+    "vue-electron": "^1.0.6",
+    "vue-router": "^2.5.3",
+    "vuetify": "^1.2.4",
+    "vuex": "^2.3.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.2",
+    "cfonts": "^1.1.3",
+    "chai": "^4.0.0",
+    "chalk": "^2.1.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.4",
+    "del": "^3.0.0",
+    "devtron": "^1.4.0",
+    "electron": "^1.7.5",
+    "electron-builder": "^19.19.1",
+    "electron-debug": "^1.4.0",
+    "electron-devtools-installer": "^2.2.0",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "inject-loader": "^3.0.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-coverage": "^1.1.1",
+    "karma-electron": "^5.1.1",
+    "karma-mocha": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.31",
+    "karma-webpack": "^2.0.1",
+    "mocha": "^3.0.2",
+    "multispinner": "^0.2.1",
+    "node-loader": "^0.6.0",
+    "require-dir": "^0.3.0",
+    "spectron": "^3.7.1",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "url-loader": "^0.5.9",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^13.0.5",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.2",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
   }
 }
